{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 94,
  "lineage": "0d132d87-4a28-05ae-ef02-ddec7708af9e",
  "resources": [
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-private-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkInterfaces/vm-ixekoaht-nic",
            "internal_domain_name_suffix": "501i5leswgbedlfg2loqp4wifb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Internet",
                "primary": true,
                "private_ip_address": "10.128.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/virtualNetworks/kopicloud-jira-vnet/subnets/kopicloud-jira-subnet"
              }
            ],
            "location": "westeurope",
            "name": "vm-ixekoaht-nic",
            "private_ip_address": "10.128.1.4",
            "private_ip_addresses": [
              "10.128.1.4"
            ],
            "resource_group_name": "kopicloud-jira-rg",
            "tags": {
              "environment": "jira"
            }
          },
          "dependencies": [
            "module.VM.azurerm_public_ip.vm_ip",
            "module.VM.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG",
            "module.network_vpc_west.azurerm_subnet.subnet",
            "module.network_vpc_west.azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-private-nic-no-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkInterfaces/vm-ixekoaht-nic",
            "internal_domain_name_suffix": "501i5leswgbedlfg2loqp4wifb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.128.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/virtualNetworks/kopicloud-jira-vnet/subnets/kopicloud-jira-subnet"
              }
            ],
            "location": "westeurope",
            "name": "vm-ixekoaht-nic",
            "private_ip_address": "10.128.1.6",
            "private_ip_addresses": [
              "10.128.1.6"
            ],
            "resource_group_name": "kopicloud-jira-rg",
            "tags": {
              "environment": "jira"
            }
          },
          "dependencies": [
            "module.VM.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG",
            "module.network_vpc_west.azurerm_subnet.subnet",
            "module.network_vpc_west.azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "NSG-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkInterfaces/vm-ixekoaht-nic|/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkSecurityGroups/sql-jira-ixekoaht-nsg",
            "network_interface_id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkInterfaces/vm-ixekoaht-nic",
            "network_security_group_id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkSecurityGroups/sql-jira-ixekoaht-nsg"
          },
          "dependencies": [
            "module.VM.azurerm_network_interface.vm-private-nic",
            "module.VM.azurerm_network_interface.vm-private-nic-no-ip",
            "module.VM.azurerm_network_security_group.vm-nsg",
            "module.VM.azurerm_public_ip.vm_ip",
            "module.VM.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG",
            "module.network_vpc_west.azurerm_subnet.subnet",
            "module.network_vpc_west.azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkSecurityGroups/sql-jira-ixekoaht-nsg",
            "location": "westeurope",
            "name": "sql-jira-ixekoaht-nsg",
            "resource_group_name": "kopicloud-jira-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow SQL",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSQL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow SSH",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "jira"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VM.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/publicIPAddresses/ip-ixekoaht-public",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.118.58.255",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "ip-ixekoaht-public",
            "resource_group_name": "kopicloud-jira-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "module.VM.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.VM02",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-private-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkInterfaces/vm-yjmzmzsm-nic",
            "internal_domain_name_suffix": "501i5leswgbedlfg2loqp4wifb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Internet",
                "primary": true,
                "private_ip_address": "10.128.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/publicIPAddresses/ip-yjmzmzsm-public",
                "subnet_id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/virtualNetworks/kopicloud-jira-vnet/subnets/kopicloud-jira-subnet"
              }
            ],
            "location": "westeurope",
            "name": "vm-yjmzmzsm-nic",
            "private_ip_address": "10.128.1.4",
            "private_ip_addresses": [
              "10.128.1.4"
            ],
            "resource_group_name": "kopicloud-jira-rg",
            "tags": {
              "environment": "jira"
            }
          },
          "dependencies": [
            "module.VM02.azurerm_public_ip.vm_ip",
            "module.VM02.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG",
            "module.network_vpc_west.azurerm_subnet.subnet",
            "module.network_vpc_west.azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "module": "module.VM02",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-private-nic-no-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkInterfaces/vm-yjmzmzsm-nic",
            "internal_domain_name_suffix": "501i5leswgbedlfg2loqp4wifb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.128.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/virtualNetworks/kopicloud-jira-vnet/subnets/kopicloud-jira-subnet"
              }
            ],
            "location": "westeurope",
            "name": "vm-yjmzmzsm-nic",
            "private_ip_address": "10.128.1.5",
            "private_ip_addresses": [
              "10.128.1.5"
            ],
            "resource_group_name": "kopicloud-jira-rg",
            "tags": {
              "environment": "jira"
            }
          },
          "dependencies": [
            "module.VM02.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG",
            "module.network_vpc_west.azurerm_subnet.subnet",
            "module.network_vpc_west.azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "module": "module.VM02",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "NSG-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkInterfaces/vm-yjmzmzsm-nic|/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkSecurityGroups/sql-jira-yjmzmzsm-nsg",
            "network_interface_id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkInterfaces/vm-yjmzmzsm-nic",
            "network_security_group_id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkSecurityGroups/sql-jira-yjmzmzsm-nsg"
          },
          "dependencies": [
            "module.VM02.azurerm_network_interface.vm-private-nic",
            "module.VM02.azurerm_network_interface.vm-private-nic-no-ip",
            "module.VM02.azurerm_network_security_group.vm-nsg",
            "module.VM02.azurerm_public_ip.vm_ip",
            "module.VM02.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG",
            "module.network_vpc_west.azurerm_subnet.subnet",
            "module.network_vpc_west.azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "module": "module.VM02",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/networkSecurityGroups/sql-jira-yjmzmzsm-nsg",
            "location": "westeurope",
            "name": "sql-jira-yjmzmzsm-nsg",
            "resource_group_name": "kopicloud-jira-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow SQL",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSQL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow SSH",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "jira"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VM02.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.VM02",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/publicIPAddresses/ip-yjmzmzsm-public",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.118.61.87",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "ip-yjmzmzsm-public",
            "resource_group_name": "kopicloud-jira-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "module.VM02.random_string.vm-name",
            "module.network_vpc_west.azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "module": "module.network_vpc_west",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.128.1.0/24",
            "address_prefixes": [
              "10.128.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/virtualNetworks/kopicloud-jira-vnet/subnets/kopicloud-jira-subnet",
            "name": "kopicloud-jira-subnet",
            "resource_group_name": "kopicloud-jira-rg",
            "virtual_network_name": "kopicloud-jira-vnet"
          },
          "dependencies": [
            "module.network_vpc_west.azurerm_resource_group.RG",
            "module.network_vpc_west.azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_vpc_west",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.128.0.0/16"
            ],
            "guid": "ac8fb6fe-b192-4182-aca6-e2dd07fac829",
            "id": "/subscriptions/d154b22a-00e9-4d61-bccd-1c77b06247da/resourceGroups/kopicloud-jira-rg/providers/Microsoft.Network/virtualNetworks/kopicloud-jira-vnet",
            "location": "westeurope",
            "name": "kopicloud-jira-vnet",
            "resource_group_name": "kopicloud-jira-rg",
            "tags": {
              "application": "kopicloud",
              "environment": "jira"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.network_vpc_west.azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}